apps/media/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: default
  annotations:
    fluxcd.io/automated: "true" # Enable automated image updates
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: linuxserver/prowlarr:latest
          ports:
            - containerPort: 9696
          livenessProbe:
            httpGet:
              path: /
              port: 9696
            initialDelaySeconds: 120
            periodSeconds: 60
            failureThreshold: 3
          volumeMounts:
            - name: config
              mountPath: /config
              subPath: prowlarr
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config-pvc
